updating image source

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   		<li>THAT LADYBUG GIRL MIRCALIOUS</li>
   		<li>BLACK CAT BOY</li>
   	</ol>
-  	<image> src='spooderman.jpg'
+  	<img src="spooderman.jpg">>
   	</body>
 
 <script>
