--- a/index.html
+++ b/index.html
@@ -3,20 +3,47 @@
   <head>
     <title>Homepage</title>
     </head>
+      <link rel='stylesheet' href="styles.css">
+       <style>
+	li {
+		font-family: cursive;
+		color: red
 
+	
+	}
+     
+    body {
+    	margin: 20px
+  
+   
+    }
+      </style> 
+  
+
+  <head>
+ 
+
+
+ 
+  </head>
   <body>
+   </body>
   	<h1>Home</h1>
+  	<a href="about.html">About</a>
   	<p>This is my homepage woah</p>
   	<h3>Favourite Marvel Charachters</h3>
-  	<a href="https://www.youtube.com/watch?v=SYMi1QCzQEY">home</a>
-  	<ol>
+  	<a href="https://www.youtube.com/watch?v=SYMi1QCzQEY">da song</a>
+  	<h1>Ordered List 1-5</h1>
+
+  	<ul></ul>
+  		<li 
   		<li>SpOODER MAN</li>
   		<li>BACKYARDIGANSS</li>
   		<li>SUPER GIRL</li>
-  		<li>THAT LADYBUG GIRL MIRCALIOUS</li>
+  		<li>THAT LADYBUG GIRL MIRACuLoiS</li>
   		<li>BLACK CAT BOY</li>
-  	</ol>
-  	<img src="spooderman.jpg">>
+  	</ul>
+  	<img src="spooderman.jpg" style="width: 300px"; border="2px">
   	</body>
 
 <script>
